--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row justify-content-center align-items-center mt-5">
-    <div class="col mt-5">
+    <div class="col-8 mt-5">
       <form action="#" class="form">
         <h3>Pokemon Search</h3>
         <input class="form-control" id="search-input" name="contacts" type="text" placeholder='Search Pokemon by name, location, or move' data-algolia-id = "<%= ENV["ALGOLIA_ID"] %>" data-algolia-search-key = "<%= ENV["ALGOLIA_SEARCH_KEY"] %>"/>
