--- a/app/assets/stylesheets/components/_searchbar.scss
+++ b/app/assets/stylesheets/components/_searchbar.scss
@@ -13,7 +13,7 @@
   background-color: #fff;
   border: 1px solid #999;
   border-top: none;
-  border-radius: 4px;
+  border-radius: 0 0 4px 4px;
 }
 .algolia-autocomplete .aa-dropdown-menu .aa-suggestion {
   cursor: pointer;
