--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,10 +1,13 @@
-<div class="container">
-  <div class="row justify-content-center align-items-center">
-    <div class="col-8">
-      <form action="#" class="form">
-        <h1>Pokemon Search</h1>
-        <input class="form-control" id="search-input" name="contacts" type="text" placeholder='Search Pokemon by name, location, or move' data-algolia-id = "<%= ENV["ALGOLIA_ID"] %>" data-algolia-search-key = "<%= ENV["ALGOLIA_SEARCH_KEY"] %>"/>
-      </form>
+
+
+  <div class="container">
+    <div class="row justify-content-center align-items-center">
+      <div class="col-8" data-controller="search">
+        <form action="#" class="form">
+          <h1>Pokemon Search</h1>
+          <input class="form-control" id="search-input" name="contacts" type="text" placeholder='Search Pokemon by name, location, or move' data-algolia-id = "<%= ENV["ALGOLIA_ID"] %>" data-algolia-search-key = "<%= ENV["ALGOLIA_SEARCH_KEY"] %>"/>
+        </form>
+      </div>
     </div>
   </div>
-</div>
+
